fix: hide scrollbars in block codes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -125,6 +125,8 @@ pre {
 
 	position: relative;
 
+	scrollbar-width: none;
+
 	code {
 		font-size: medium;
 		&::after {
